@@ -49,18 +49,18 @@ static int            hexFd;              /* Open hex file descriptor    */
 static size_t         hexFileSize;        /* Save for use by munmap()    */
 static unsigned char  hexBuf[56];         /* Data read/written to USB    */
 extern unsigned char *usbBuf;             /* In usb code                 */
-unsigned char bytesPerAddress = 1;        /* Bytes in flash per address */ 		
+unsigned char bytesPerAddress = 1;        /* Bytes in flash per address  */
 static char Flushed= 1;                   /* Do we need to flush buffer? */
 
-/**************************************************************************** 		
-Function : hexSetBytesPerAddress 		
-Description : Sets given byte width 		
-Parameters : unsigned char Bytes per address 		
-Returns : Nothing (void) 		
-****************************************************************************/ 		
-void hexSetBytesPerAddress(unsigned char bytes) 		
-{ 		
-bytesPerAddress = bytes; 		
+/****************************************************************************
+Function : hexSetBytesPerAddress
+Description : Sets given byte width
+Parameters : unsigned char Bytes per address
+Returns : Nothing (void)
+****************************************************************************/
+void hexSetBytesPerAddress(unsigned char bytes)
+{
+	bytesPerAddress = bytes;
 }
 
 /****************************************************************************
@@ -88,7 +88,7 @@ ErrorCode hexOpen(char * const filename)
 
 #ifndef WIN
 			if((hexFileData = mmap(0,hexFileSize,PROT_READ,
-			  MAP_FILE | MAP_SHARED,hexFd,0)) != (void *)(-1)) {
+					MAP_FILE | MAP_SHARED,hexFd,0)) != (void *)(-1)) {
 				hexPlusOne = &hexFileData[1];
 				return ERR_NONE;
 			}
@@ -192,28 +192,28 @@ static ErrorCode issueBlock(
 #endif
 
 	// check device memory blocks are programmable
-	if ( verifyBlockProgrammable( &addr, &len ) ) { 
+	if ( verifyBlockProgrammable( &addr, &len ) ) {
 #ifdef DEBUG	
-		printf( "Skip data on address %04x with length %d\n", addr, len ); 
+		printf( "Skip data on address %04x with length %d\n", addr, len );
 #endif
-		return ERR_NONE; 
+		return ERR_NONE;
 	}
 	// length must be even
 	if ( len & 1 ) {
-#ifdef DEBUG	
-		printf( "Add one byte to data on address %04x with length %d\n", addr, len ); 
+#ifdef DEBUG
+		printf( "Add one byte to data on address %04x with length %d\n", addr, len );
 #endif
 		hexBuf[ len++ ] = 0xff;
 	}
 
- 	/* Short data packets need flushing */
+	/* Short data packets need flushing */
 	if (!verify && len == 0 && !Flushed) {
- 	DEBUGMSG("Completing");
- 	usbBuf[0] = PROGRAM_COMPLETE;
- 	status = usbWrite(1,0);
-	Flushed= 1;
- 	return status;
- 	}
+		DEBUGMSG("Completing");
+		usbBuf[0] = PROGRAM_COMPLETE;
+		status = usbWrite(1,0);
+		Flushed= 1;
+		return status;
+	}
 
 	bufWrite32(usbBuf,1,addr / bytesPerAddress);
 	usbBuf[5] = len;
@@ -238,7 +238,7 @@ static ErrorCode issueBlock(
 			}
 #else
 			return (memcmp(&usbBuf[64 - len],hexBuf,len) ?
-			  ERR_VERIFY : ERR_NONE);
+				ERR_VERIFY : ERR_NONE);
 #endif
 
 		}
@@ -286,130 +286,131 @@ ErrorCode hexWrite(const char verify)
 	unsigned int  len,type,addrHi,addrLo,addr32,addrSave;
 
 	for(pass=0;pass<=verify;pass++) {
-	  offset   = 0; /* Start at beginning of hex file         */
-	  bufLen   = 0; /* Hex buffer initially empty             */
-	  addrHi   = 0; /* Initial address high bits              */
-	  addrSave = 0; /* PIC start addr for hex buffer contents */
-	  addr32   = 0;
+		offset   = 0; /* Start at beginning of hex file         */
+		bufLen   = 0; /* Hex buffer initially empty             */
+		addrHi   = 0; /* Initial address high bits              */
+		addrSave = 0; /* PIC start addr for hex buffer contents */
+		addr32   = 0;
 
-	  if(pass) (void)printf("\nVerifying:");
+		if(pass) (void)printf("\nVerifying:");
 
-	  for(;;) {  /* Each line in file */
+		for(;;) {  /* Each line in file */
 
-	    /* Line start contains length, 16-bit address and type */
-	    if(3 != sscanf(&hexFileData[offset],":%02x%04x%02x",
-	      &len,&addrLo,&type)) return ERR_HEX_SYNTAX;
+			/* Line start contains length, 16-bit address and type */
+			if(3 != sscanf(&hexFileData[offset],":%02x%04x%02x",
+					&len,&addrLo,&type))
+				return ERR_HEX_SYNTAX;
 
-	    /* Position of %02x checksum at end of line */
-	    end = offset + 9 + len * 2;
+			/* Position of %02x checksum at end of line */
+			end = offset + 9 + len * 2;
 
-	    /* Verify checksum on first (write) pass */
-	    if(!pass) {
-	      for(checksum = 0,i = offset + 1;i < end;
-	        checksum = (checksum + (0x100 - atoh(i))) & 0xff,i += 2);
-	      if(atoh(end) != checksum) return ERR_HEX_CHECKSUM;
-	    }
+			/* Verify checksum on first (write) pass */
+			if(!pass) {
+				for(checksum = 0,i = offset + 1;i < end;
+					checksum = (checksum + (0x100 - atoh(i))) & 0xff,i += 2);
+				if(atoh(end) != checksum) return ERR_HEX_CHECKSUM;
+			}
 
-	    /* Process different hex record types.  Using if/else rather
-	       than a switch in order to better handle EOF cases (allows
-	       simple 'break' rather than goto or other nasties). */
+			/* Process different hex record types.  Using if/else rather
+			   than a switch in order to better handle EOF cases (allows
+			   simple 'break' rather than goto or other nasties). */
 
-	    if(0 == type) { /* Data record */
+			if(0 == type) { /* Data record */
 
-	      /* If new record address is not contiguous with prior record,
-	         issue accumulated hex data (if any) and start anew. */
-	      if((addrHi + addrLo) != addr32) {
-		// flush previous write
-		if(!Flushed && ERR_NONE != (status = issueBlock(addrSave,0,pass)))
-	          return status;
-	        addr32 = addrHi + addrLo;
-	        if(bufLen) {
-	          if(ERR_NONE != (status = issueBlock(addrSave,bufLen,pass)))
-	            return status;
-	          bufLen = 0;
-	        }
-	        addrSave = addr32;
-	      }
+				/* If new record address is not contiguous with prior record,
+				   issue accumulated hex data (if any) and start anew. */
+				if((addrHi + addrLo) != addr32) {
+					// flush previous write
+					if(!Flushed && ERR_NONE != (status = issueBlock(addrSave,0,pass)))
+						return status;
+					addr32 = addrHi + addrLo;
+					if(bufLen) {
+						if(ERR_NONE != (status = issueBlock(addrSave,bufLen,pass)))
+							return status;
+						bufLen = 0;
+					}
+					addrSave = addr32;
+				}
 
-	      /* Parse bytes from line into hexBuf */
-	      for(i = offset + 9;i < end;i += 2) {
-	        hexBuf[bufLen++] = atoh(i); /* Add to hex buffer */
-	        /* If buffer is full, issue block and start anew */
-	        if(sizeof(hexBuf) == bufLen) {
-	          if(ERR_NONE != (status = issueBlock(addrSave,bufLen,pass)))
-	            return status;
-	          bufLen = 0;
-	        }
+				/* Parse bytes from line into hexBuf */
+				for(i = offset + 9;i < end;i += 2) {
+					hexBuf[bufLen++] = atoh(i); /* Add to hex buffer */
+					/* If buffer is full, issue block and start anew */
+					if(sizeof(hexBuf) == bufLen) {
+						if(ERR_NONE != (status = issueBlock(addrSave,bufLen,pass)))
+							return status;
+						bufLen = 0;
+					}
 
-	        /* Increment address, wraparound as per hexfile spec */
-	        if(0xffffffff == addr32) {
-	          /* Wraparound.  If any hex data, issue and start anew. */
-	          if(bufLen) {
-	            if(ERR_NONE !=
-	              (status = issueBlock(addrSave,bufLen,pass)))
-	                return status;
-	            bufLen = 0;
-	          }
-	          addr32 = 0;
-	        } else {
-	          addr32++;
-	        }
+					/* Increment address, wraparound as per hexfile spec */
+					if(0xffffffff == addr32) {
+						/* Wraparound.  If any hex data, issue and start anew. */
+						if(bufLen) {
+							if(ERR_NONE !=
+									(status = issueBlock(addrSave,bufLen,pass)))
+								return status;
+							bufLen = 0;
+						}
+						addr32 = 0;
+					} else {
+						addr32++;
+					}
 
-	        /* If issueBlock() used, save new address for next block */
-	        if(!bufLen) addrSave = addr32;
-	      }
+					/* If issueBlock() used, save new address for next block */
+					if(!bufLen) addrSave = addr32;
+				}
 
-	    } else if(1 == type) { /* EOF record */
+			} else if(1 == type) { /* EOF record */
 
-	      break;
+				break;
 
-	    } else if(4 == type) { /* Extended linear address record */
+			} else if(4 == type) { /* Extended linear address record */
 
-	      if(1 != sscanf(&hexFileData[offset+9],"%04x",&addrHi))
-	        return ERR_HEX_SYNTAX;
-	      addrHi <<= 16;
-	      addr32 = addrHi;
-	      /* Assume this means a noncontiguous address jump; issue block
-	         and start anew.  The prior noncontiguous address code should
-	         already have this covered, but in the freak case of an
-	         extended address record with no subsequent data, make sure
-	         the last of the data is issued. */
-	      // flush previous write
-	      if(!Flushed && ERR_NONE != (status = issueBlock(addrSave,0,pass)))
-	        return status;
-	      if(bufLen) {
-	        if(ERR_NONE != (status = issueBlock(addrSave,bufLen,pass)))
-	          return status;
-	        bufLen   = 0;
-	      }
-	      addrSave = addr32;
+				if(1 != sscanf(&hexFileData[offset+9],"%04x",&addrHi))
+					return ERR_HEX_SYNTAX;
+				addrHi <<= 16;
+				addr32 = addrHi;
+				/* Assume this means a noncontiguous address jump; issue block
+				   and start anew.  The prior noncontiguous address code should
+				   already have this covered, but in the freak case of an
+				   extended address record with no subsequent data, make sure
+				   the last of the data is issued. */
+				// flush previous write
+				if(!Flushed && ERR_NONE != (status = issueBlock(addrSave,0,pass)))
+					return status;
+				if(bufLen) {
+					if(ERR_NONE != (status = issueBlock(addrSave,bufLen,pass)))
+						return status;
+					bufLen   = 0;
+				}
+				addrSave = addr32;
 
 
-	    } else if(5 == type) { /* Start address */
+			} else if(5 == type) { /* Start address */
 
-	      /* Ignore */
+				/* Ignore */
 
-	    } else { /* Unsupported record type */
-	      return ERR_HEX_RECORD;
-	    }
+			} else { /* Unsupported record type */
+				return ERR_HEX_RECORD;
+			}
 
-	    /* Advance to start of next line (skip CR/LF/etc.), unless EOF */
-	    if(NULL == (ptr = strchr(&hexFileData[end+2],':'))) break;
+			/* Advance to start of next line (skip CR/LF/etc.), unless EOF */
+			if(NULL == (ptr = strchr(&hexFileData[end+2],':'))) break;
 
-	    offset = ptr - hexFileData;
-	  }
+			offset = ptr - hexFileData;
+		}
 
-	  /* At end of file, issue any residual data (counters reset at top) */
-	  if(bufLen &&
-	    (ERR_NONE != (status = issueBlock(addrSave,bufLen,pass))))
-	      return status;
+		/* At end of file, issue any residual data (counters reset at top) */
+		if(bufLen &&
+				(ERR_NONE != (status = issueBlock(addrSave,bufLen,pass))))
+			return status;
 
-	  /* Make sure last data is flushed */
-	  if(!pass && !Flushed)
-	    return issueBlock(addrSave,0,pass);
+		/* Make sure last data is flushed */
+		if(!pass && !Flushed)
+			return issueBlock(addrSave,0,pass);
 
 #ifdef DEBUG
-	  (void)printf("PASS %d of %d COMPLETE\n",pass,verify);
+		(void)printf("PASS %d of %d COMPLETE\n",pass,verify);
 #endif
 	}
 
